k8/redis_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cache
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: redis-cache
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: redis-cache
    spec:
      containers:
      - name: redis-cache
        image: redis:alpine
        imagePullPolicy: Always
        ports:
        - containerPort: 6379
