k8/redis_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
  labels:
    app: redis-cache
spec:
  ports:
  - port: 6379
    targetPort: 6379
    protocol: TCP
  selector:
    app: redis-cache
