k8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: site-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /api/(files.*)
        pathType: Prefix
        backend:
          service:
            name: files
            port:
              number: 80
      - path: /api/(search)
        pathType: Prefix
        backend:
          service:
            name: search
            port:
              number: 80
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: web-bff
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend
            port: 
              number: 80
